# EGX-MCP

./: .gitignore  README.md  egx_controller.py  pyproject.toml  server.py
Domain/: date_parser.py  egx_controller.py  gold_controller.py
src/: server.py
src/Domain/: egx_controller.py  gold_controller.py
